# TenSure

./: .gitignore  CMakeLists.txt  README.md  generate_module.py
include/backends/: backend_interface.hpp
include/finch_wrapper/: finch_backend.hpp
include/sparsifier_wrapper/: sparsifier_backend.hpp
include/taco_wrapper/: comparator.hpp  executor.hpp  generator.hpp  taco_backend.hpp
include/tensure/: ThreadPool.hpp  formats.hpp  logger.hpp  random_gen.hpp  utils.hpp
src/: main.cpp
src/finch_wrapper/: finch_backend.cpp
src/grammarinator/: Einsum.g4
src/sparsifier_wrapper/: sparsifier_backend.cpp
src/taco_wrapper/: comparator.cpp  executor.cpp  generator.cpp  taco_backend.cpp
src/tensure/: ThreadPool.cpp  random_gen.cpp  utils.cpp
